<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".PerfilActivity">

    <include layout="@layout/toolbar_perfil" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="6dp"
        app:cardCornerRadius="9dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5dp"
            android:paddingBottom="9dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/userAvatar"
                    android:layout_width="90dp"
                    android:layout_height="85dp"
                    android:contentDescription="@string/imageuser"
                    android:elevation="3dp"
                    app:srcCompat="@drawable/freddy" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginEnd="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_weight="6">

                        <TextView
                            android:id="@+id/txtUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:text="@string/nombre_del_usuario"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp"/>
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="20dp"
                            android:src="@drawable/like" />
                        <TextView
                            android:padding="1dp"
                            android:id="@+id/likes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/editarDatos"
                        android:layout_width="25dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:src="@drawable/edit" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/descripci_n"
                    android:textSize="18sp"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/nombre_real"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtInsta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="Instagram"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/email"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="6dp"
        app:cardCornerRadius="9dp"
        app:cardElevation="4dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorNaranjo"
            app:tabRippleColor="@color/colorNaranjo"
            app:tabSelectedTextColor="@color/colorNaranjo"
            app:tabTextColor="@color/black"/>

    </androidx.cardview.widget.CardView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerPerfil"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/borde_superior"/>
</LinearLayout>