<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorCelesteOscuro"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TituloMayor"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/esquinas_redondeadas_container"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingTop="8dp"
        android:translationY="-43dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="25dp"
            android:text="@string/eslogan"
            android:textColor="@color/colorCelesteClaro"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            app:srcCompat="@drawable/iconcircle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:background="@drawable/esquinas_redondeadas_iconos"
                app:srcCompat="@drawable/user" />

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/esquinas_redondeadas_iconos"
                android:hint="Usuario"
                android:textSize="18sp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:autofillHints="username"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:background="@drawable/esquinas_redondeadas_iconos"
                app:srcCompat="@drawable/key" />

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/esquinas_redondeadas_iconos"
                android:hint="Contraseña"
                android:textSize="18sp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:autofillHints="password"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="35dp">

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/efecto_button"
            android:text="Iniciar Sesión"
            android:textColor="@color/white"
            android:textSize="13sp"
            style="?android:attr/borderlessButtonStyle" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Si no tienes cuenta aún"
                android:textColor="@color/colorPrincipal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrate"
                android:textColor="@color/colorCelesteOscuro"
                android:textSize="18sp"/>
        </LinearLayout>

    <include layout="@layout/footer"/>
</LinearLayout>